--------------------------------------------

Version 0.3p
------------
* Added subDom and slut debug options to cocksmith (for player)
* Added the ability to sell items in multiples of 1x, 5x or all you carry. Made it overall easier to sell a lot of stuff.
* Added a new scene by QB/LD where Terry fucks bunnies (win->fuck(m))
* Added a new petting scene by QB/LD to Terry. Touch fluffy tail!
* Added new patreon sponsored content:
 - Naga loss scene for cocked players by LonelyRonin.
* Made some tweaks to the code that should allow the game to run on offline Internet Explorer. Save/Load isn't possible, except by text.
* Implemented an EXTREMELY barebones pregnancy system.
 - Save/load works.
 - Placeholder appearance screen (only for player atm).
 - Placeholder progress messages (right now, implemented pregnancies are about 24 hours for testing purposes)
 - Currently, the PLAYER can get pregnant from bunnies, equines, lizards and cats.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3o
------------
* Various bugfixes in new content.
* A fuckton of typo fixes, courtesy to Johnathan_Roberts.
* Another fuckton of typo fixes, courtesy to Spiegelmeister.
* Rosalin TFs:
 - Moth TF.
* Foxberries can now be picked in the forest, making it possible to craft the Vulpinix potion.
* Terry horsecock worship scene (Huuuuge), written by LukaDoc and QuietBrowser.
* Added the first of hopefully many scenes from Patreon sponsored writer LonelyRonin:
 - Naga encounter
 - Naga loss (requires pussy)
* Added a bunch of more random encounters to Rigard, written by Del and sponsored by Patreon.
* Added the first of hopefully many scenes from Patreon sponsored writer Jo Rhade:
 - Equines win, fuck mare (requires real cock)
* Fixed a bug in Terry when you attempt the horsecock TF scene as a pure female player.