@@ -11,6 +11,7 @@ Version 0.3p
 * Added the ability to sell items in multiples of 1x, 5x or all you carry. Made it overall easier to sell a lot of stuff.
 * Added a new scene by QB/LD where Terry fucks bunnies (win->fuck(m))
 * Added a new petting scene by QB/LD to Terry. Touch fluffy tail!
+* Added a talk scene for Terry by QB/LD where you can ask him about his past.
 * Added new patreon sponsored content:
  - Naga loss scene for cocked players by LonelyRonin.
 * Made some tweaks to the code that should allow the game to run on offline Internet Explorer. Save/Load isn't possible, except by text.
